// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart getCircle should get return a path 1`] = `
<path
  className="tc-pie-chart-color-red theme-tc-pie-chart-color-red"
  d="M0,0Z"
  transform="translate(10,10)"
/>
`;

exports[`PieChart getCircle should get return a path with hover color 1`] = `
<path
  className="tc-pie-chart-color-red theme-tc-pie-chart-color-red"
  d="M0,0Z"
  transform="translate(10,10)"
/>
`;

exports[`PieChart getEmptyPartCircle should get return a path for the rest 1`] = `
<path
  className="tc-pie-chart-color-alto theme-tc-pie-chart-color-alto"
  d="M0,0Z"
  transform="translate(10,10)"
/>
`;

exports[`PieChart snapshots render should render a PieChart 1`] = `
<span
  className="tc-pie-chart-icon theme-tc-pie-chart-icon"
>
  <svg
    className="tc-pie-chart-icon-graph theme-tc-pie-chart-icon-graph"
    height={20}
    style={
      {
        "height": 20,
        "width": 20,
      }
    }
    width={20}
  >
    <path
      className="tc-pie-chart-color-rio-grande theme-tc-pie-chart-color-rio-grande"
      d="M1.08,-8.935A9,9,0,0,1,3.268,8.386L2.514,5.448A6,6,0,0,0,1.08,-5.902Z"
      transform="translate(10,10)"
    />
    <path
      className="tc-pie-chart-color-chestnut-rose theme-tc-pie-chart-color-chestnut-rose"
      d="M1.176,8.923A9,9,0,0,1,-1.734,8.831L-0.797,5.947A6,6,0,0,0,0.422,5.985Z"
      transform="translate(10,10)"
    />
    <path
      className="tc-pie-chart-color-lightning-yellow theme-tc-pie-chart-color-lightning-yellow"
      d="M-3.788,8.164A9,9,0,0,1,-4.378,7.863L-2.724,5.346Z"
      transform="translate(10,10)"
    />
    <path
      className="tc-pie-chart-color-dove-gray theme-tc-pie-chart-color-dove-gray"
      d="M-6.125,6.594A9,9,0,0,1,-6.594,6.125L-4.243,4.243Z"
      transform="translate(10,10)"
    />
    <path
      className="tc-pie-chart-color-silver-chalice theme-tc-pie-chart-color-silver-chalice"
      d="M-7.863,4.378A9,9,0,0,1,-8.164,3.788L-5.346,2.724Z"
      transform="translate(10,10)"
    />
    <path
      className="tc-pie-chart-color-alto theme-tc-pie-chart-color-alto"
      d="M-8.831,1.734A9,9,0,0,1,-1.08,-8.935L-1.08,-5.902A6,6,0,0,0,-5.947,0.797Z"
      transform="translate(10,10)"
    />
  </svg>
  <div
    className="tc-pie-chart-color-rio-grande theme-tc-pie-chart-color-rio-grande"
  >
    50%
  </div>
</span>
`;

exports[`PieChart snapshots render should render a Skeleton when the state is loading 1`] = `
<span
  aria-busy="true"
  aria-label="Loading chart"
  className="tc-pie-chart-loading theme-tc-pie-chart-loading"
>
  <Skeleton
    className="tc-pie-chart-loading-circle theme-tc-pie-chart-loading-circle"
    height={20}
    type="circle"
    width={20}
  />
  <Skeleton
    size="small"
    type="text"
  />
</span>
`;
